[package]
edition = "2024"
name = "okja"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "okja"
path = "./src/bin/main.rs"
test = false
bench = false

[build-dependencies]
cc = { version = "1.2.62", features = ["parallel"] }
bindgen = "0.72.1"

[dependencies]
esp-hal = { version = "~1.1.1", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt = "1.1.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3", "defmt"] }
# log = "0.4.29"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
esp-backtrace = { version = "0.19.0", features = [
  "esp32s3",
  "panic-handler",
  "defmt",
] }
# esp-println = { version = "0.16.1", features = ["esp32s3", "defmt-espflash"] }
assign-resources = "0.5.0"
embedded-graphics = "0.8.2"
mipidsi = "0.10.0"
embedded-hal-bus = "0.3.0"
display-interface-parallel-gpio = "0.7.0"
#mousefood = "0.2.1"
embedded-sdmmc = "0.9.0"
cty = "0.2.2"
miniflac-sys = { git = "https://github.com/kpfromer/miniflac-sys" }
#claxon = "0.4.3"
tlv320dac3100 = "0.1.0"
defmt-rtt = "1.2.0"
embassy-sync = "0.8.0"
field = "0.1.0"

# [dev-dependencies]
# embedded-test = { version = "0.7.1", features = [
#   "defmt",
#   "embassy-010",
#   "external-executor",
#   "xtensa-semihosting",
# ] }

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"
# debug = 2


[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
# debug-assertions = false
# incremental = false
lto = 'fat'
opt-level = 's'
# overflow-checks = true
